--- a/.github/workflows/tfsec-tflint.yml
+++ b/.github/workflows/tfsec-tflint.yml
@@ -32,7 +32,7 @@ jobs:
 
       # Run tflint for Terraform linting
       - name: Run tflint
-        uses: terraform-linters/tflint-action@v1.5.0
+        uses: terraform-linters/tflint-action@v3
         with:
           tf_version: '0.14.3'
         env:
@@ -40,7 +40,7 @@ jobs:
 
       # Run tfsec for security scanning
       - name: Run tfsec
-        uses: aquasecurity/tfsec-action@latest
+        uses: aquasecurity/tfsec-action@1.0.12
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
