--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,17 +5,22 @@ pipeline {
         string(name: 'REGION', defaultValue: 'us-east-1', description: 'AWS region for deployment')
     }
 
+    environment {
+        AWS_ACCESS_KEY_ID     = credentials('AWS_ACCESS_KEY_ID')
+        AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
+    }
+
     stages {
         stage('Checkout') {
             steps {
-                checkout scm
+                git 'https://github.com/polagonianil/Jenkins-pipeline-Terraform.git'
             }
         }
 
         stage('Terraform Init') {
             steps {
                 script {
-                    sh "terraform init"
+                    bat 'cd Jenkins-pipeline-Terraform && terraform init'
                 }
             }
         }
@@ -23,7 +28,7 @@ pipeline {
         stage('Terraform Plan') {
             steps {
                 script {
-                    sh "terraform plan -var='instance_type=${params.INSTANCE_TYPE}' -var='region=${params.REGION}' -out=tfplan"
+                    bat "cd Jenkins-pipeline-Terraform && terraform plan -var=\"instance_type=${params.INSTANCE_TYPE}\" -var=\"region=${params.REGION}\" -out=tfplan"
                 }
             }
         }
@@ -32,7 +37,7 @@ pipeline {
             steps {
                 input 'Approve Terraform Apply?'
                 script {
-                    sh "terraform apply -auto-approve tfplan"
+                    bat "cd Jenkins-pipeline-Terraform && terraform apply -auto-approve tfplan"
                 }
             }
         }
